<resources>
    <!-- Facebook Auth -->
    <string name="facebook_app_id">975045039543644</string>
    <string name="fb_login_protocol_scheme">fb975045039543644</string>
    <!-- App Strings -->
    <string name="app_name">Smarty Bucket</string>
    <string name="app_tagline">Tracking expenses the smart way.</string>
    <string name="home">Home</string>
    <string name="scan">Scan</string>
    <string name="expenses">Expenses</string>
    <string name="inventory">Inventory</string>
    <string name="dollar_sign">$</string>
    <string name="money_spent_value">230</string>
    <string name="money_spent_label">Money Spent</string>
    <string name="money_spent_msg">Great! So far your monthly spending hasn\'t reached your monthly budget limit.</string>
    <string name="monthly_budget_date_range">10 – 21 SEP</string>
    <string name="track_new_items_msg_heading">Got more items to track?</string>
    <string name="track_new_items_msg_body">Tap here to add them and update their prices</string>

    <!-- Bottom Navigation Items -->
    <string name="navigation_scan">Ingredients</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_account">My Account</string>

    <string name="hello_message">Hello</string>
    <string name="currency">$</string>
    <string name="monthly_budget_label">Monthly Budget</string>
    <string name="daily_expense_label">Daily Expenses</string>
    <string name="default_daily_expense">0.00</string>
    <string name="last_meal_added_label">Last Meal Added</string>
    <string name="default_last_meal_added">Loading Last Meal Added</string>

    <!-- Register new Items and prices -->
    <string name="register_items_title">Your Bucket List</string>
    <string name="register_items_description">Add items that you usually buy &amp; their prices.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Main</string>
    <string name="hint_text_category">Select Item Category</string>
    <string name="hint_text_name">Enter Item Name</string>
    <string name="hint_text_price">Enter Item Price</string>
    <string name="register_items_item_name_label">Item Name</string>
    <string name="register_items_category_label">Category</string>
    <string name="register_items_price_label">Price(Rs)</string>
    <string name="register_items_name_label">Item</string>
    <string name="message_no_results">No Items Added Yet</string>
    <string name="item_price_hint">Item Price</string>
    <string name="my_preferences">My Preferences</string>
    <string name="configure_your_account_settings">Configure your account settings</string>
    <string name="recipes_available">Recipes Found</string>
    <string name="create_account_with_email">Create account using email</string>
    <string name="login_with_email">Login with Email</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="error_low_storage">You do not have enough storage on this device to use the Mobile Vision OCR API. Please free up some space and try again!</string>
    <string-array name="item_categories_array">
        <item>Spices</item>
        <item>Juice</item>
        <item>Vegetables</item>
        <item>Snacks</item>
        <item>Oil</item>
        <item>Dairy</item>
        <item>Poultry</item>
        <item>Seafood</item>
        <item>Salad</item>
        <item>Seasoning</item>
    </string-array>
    <string name="set_budget_desc">Setting a monthly spending target is important as it helps in the forecasting and planning process!</string>
    <string name="set_preferences_desc">Setting preferences will allow us to show the most suitable recipes for you</string>
    <string name="main_activity_expenses_chart_label">Monthly Expenses Tracking</string>

    <string name="tfe_ic_app_name" translation_description="Image Classification demo app [CHAR_LIMIT=40]">TFL Classify</string>
    <string name="tfe_ic_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="tfe_ic_gpu_quant_error" translation_description="Error regarding GPU support for Quant models[CHAR_LIMIT=60]">GPU does not yet supported quantized models.</string>
    <string name="tfe_ic_model" translatable="false">Model:</string>
    <string-array name="tfe_ic_models" translatable="false">
        <item>Quantized_EfficientNet</item>
        <item>Float_EfficientNet</item>
        <item>Quantized_MobileNet</item>
        <item>Float_MobileNet</item>
    </string-array>

    <string name="tfe_ic_device" translatable="false">Device:</string>
    <string-array name="tfe_ic_devices" translatable="false">
        <item>CPU</item>
        <!-- TODO: Add GPU  -->
        <item>GPU</item>
    </string-array>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="scan_grocery_list">Scan Grocery List</string>
    <string name="scan_ingredient">Scan Ingredient</string>
    <string name="scan_grocery_list_desc">Take a picture of a list of groceries that you want to use to prepare your meal</string>
    <string name="scan_ingredient_desc">Scan ingredients in real-time and add them to your basket of ingredients for your meal</string>
    <string name="scan_instruction">Tap on the scan method you want to use.</string>
    <string name="recommended_label">Recommended Recipe</string>
    <string name="default_lastmeal_expense">$ --</string>
    <string name="default_recommendation_placeholder">Loading Recipes</string>
    <string name="not_interested">Not Interested</string>
    <string name="balanced_diet">Balanced Diet</string>
    <string name="high_protein_diet">High Protein Diet</string>
    <string name="low_fat_diet">Low Fat Diet</string>
    <string name="low_carb_diet">Low Carb Diet</string>
    <string name="action_add">Add</string>
    <string name="reminder_label">Daily Reminder</string>
    <string name="action_set_reminder">Set Time</string>
    <string name="budget_label">Monthly Budget</string>
    <string name="update_preferences">Set your diet preferences</string>
    <string name="update_budget">Set your Monthly Budget</string>
    <string name="set_budget">Set Budget</string>
    <string name="set_preferences">Set Preferences</string>
    <string name="daily_limit_label">Your Daily Limit</string>
    <string name="weekly_limit_label">Your Weekly Limit</string>
    <string name="total_cost">Total Cost</string>
    <string name="view_online">View Online</string>
    <string name="default_recipe">Loading Recipe Name...</string>
</resources>
