<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/homeNav"
            android:icon="@drawable/home_run"
            android:title="@string/navigation_home" />
        <item
            android:id="@+id/scanNav"
            android:icon="@drawable/ic_camera_alt_white_24dp"
            android:title="@string/navigation_scan" />
        <item
            android:id="@+id/expense"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/expenses" />
        <item
            android:id="@+id/account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/navigation_account" />
    </group>
</menu>